2006-09-14  Andre Klapper  <a9016009@gmx.de>

	* itip-view.c: correct display of time. Fixes bug #343686.

2006-08-23  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #347248

	* itip-formatter.c: (update_item): Update the
	em_utils_temp_save_part to use readwrite mode.

2006-08-23  Matthew Barnes  <mbarnes@redhat.com>
  	 
	* itip-formatter.c:
	fix an uninitialized GError - fixes bug 352423.

2006-08-23  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #350395 by Øystein Gisnås
	
	* itip-view.c: (format_date_and_time_x): The patch adds some extra 
	checks to avoid the crash.

2006-08-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #328268
	* itip-formatter.c: (start_calendar_server): Check
	for the presence of ecal before connecting the signal.						 

2006-08-11  Harish Krishnaswamy  <kharish@novell.com>

	* itip-formatter.c: (send_comp_to_attendee):
	Add missing argument in the call to itip_send_comp.

2006-07-22  Chenthill Palanisamy  <pchenthill@novell.com>

	* itip-formatter.c: (cal_opened_cb), (source_selected_cb),
	(find_cal_opened_cb), (extract_itip_data), (view_response_cb),
	(format_itip_object):
	* itip-view.c: (set_journal_sender_text), (set_sender_text),
	(set_buttons), (itip_view_set_source_list),
	(itip_view_get_rsvp_comment), (itip_view_set_needs_decline):
	* itip-view.h: Added support shared Memos.

2006-07-06  Harish Krishnaswamy  <kharish@novell.com>

	* itip-formatter.c: (format_itip_object):
	Handle ICAL_X methods from Microsoft Live as 
	request methods.

2006-06-19  Harish Krishnaswamy  <kharish@novell.com>

	* itip-formatter.c (update_item):
	Free GSList and its data after calling 
	e_cal_component_get_attachment_list.

2006-06-16  Sankar P  <psankar@novell.com>

	* itip-formatter.c: (view_response_cb):
	Deletes a GroupWise appointment if accepted or deleted.
		
2006-06-16  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #179774 (b.n.c)
	* itip-formatter.c: (cal_opened_cb), (find_cal_opened_cb):